dev/product/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product
  namespace: yas-dev
  labels:
    app: product
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
      - name: product
        image: ghcr.io/nashtech-garage/yas-product:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 256Mi
            cpu: 100m
          limits:
            memory: 512Mi
            cpu: 500m
