dev/product/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product
  namespace: yas-dev
  labels:
    app: product
spec:
  type: ClusterIP
  selector:
    app: product
  ports:
  - port: 80
    targetPort: 80
