dev/product/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product
  namespace: yas-dev
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: api.yas.local.com
    http:
      paths:
      - path: /product
        pathType: ImplementationSpecific
        backend:
          service:
            name: product
            port:
              number: 80
